<resources>
    <string name="app_name">Пирамида развития</string>
    <string name="pyramid">Пирамида</string>
    <string name="diary">Дневник</string>
    <string name="help">Справка</string>
    <string name="contents">Каталог</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="saving">Сохранение рассуждений</string>
    <string name="new_record">Новая запись</string>
    <string name="test">Тест</string>
    <string name="about_test_info">
        This test is designed to evaluate various aspects of your personality and preferences.
        It consists of multiple sections, each focusing on different facets.
        The results will provide insights into your strengths and areas for improvement.
    </string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="settings_about">About</string>
    <string name="settings">Настройки</string>
    <string name="icon_description">Icon description</string>
    <string name="setting_option">Setting Option</string>
    <string-array name="help_titles">
        <item>Свайп</item>
        <item>Долгое нажатие</item>
        <item>Нажатие на верхушку</item>
    </string-array>
    <string-array name="help_subtitles">
        <item>Вращение слоя</item>
        <item>Построение пирамиды по грани</item>
        <item>Блокировка пирамиды для прокрутки сразу всех слоев</item>
    </string-array>

    <string name="contents_item_1">Оглавление</string>
    <string name="help_about">Об авторе</string>
    <string name="close">Закрыть</string>
    <string name="help_about_text">Павел Пискарёв. Ph.D Психолог. Коуч. Архитектор развития. Председатель правления Международной Ассоциации Аналитического Коучинга, ректор Института психологии творчества. Член-корреспондент МАПН.

Автор концептов «Drive», «Восхождение героя», автор методов «НейроГрафика»  и «Пирамида развития»,  автор уникальных образовательных программ и социальных проектов. Опыт профессиональной реализации с 1987 г.
\n\n
        <b>Сайт:</b> <a href="http://piskarev.ru">piskarev.ru</a>\n\n
        <b>Основной сайт Института:</b> <a href="https://neurographica.metamodern.ru/">neurographica.metamodern.ru</a>\n
        <b>Календарь событий:</b> <a href="https://calendar.metamodern.ru/">calendar.metamodern.ru</a>\n
        <b>Сайт Пирамида Мышления:</b> <a href="https://ipyramid.metamodern.ru/">ipyramid.metamodern.ru</a>\n
        <b>Наши каналы:</b> <a href="education.neurograff.com/chtm/ screens~navigate">education.neurograff.com/chtm/ screens~navigate</a>\n



    </string>
    <string name="help_about_links">Ссылки</string>
    <string name="help_about_links_text">
        <b>Сайт:</b> <a href="http://piskarev.ru">piskarev.ru</a>\n\n<b>Теория:</b> <a href="http://ipyramid.ru/theory">ipyramid.ru/theory</a>\n<b>Видео:</b> <a href="http://ipyramid.ru/video">ipyramid.ru/video</a>\n<b>Обучение:</b> <a href="http://ipyramid.ru/education">ipyramid.ru/education</a>\n
    </string>
    <string name="ready">Готово</string>
</resources>
